fix image alignment, style mobile menu, fixed route path

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,168 +16,3 @@ a {
 * {
   box-sizing: border-box;
 }
-
-/* .slick-slider {
-  display: flex !important;
-  flex-direction: column !important;
-  justify-content: center !important;
-} */
-.slick-list {
-  height: 91vw !important;
-  display: flex !important;
-  flex-direction: column !important;
-  justify-content: center !important;
-}
-
-.slick-dots li {
-  margin: 0 !important;
-}
-.slick-dots li button:before {
-  font-size: 11px !important;
-}
-.slick-dots li.slick-active button:before {
-  color: white !important;
-}
-
-@media only screen and (min-width: 768px) {
-  .slick-list {
-    height: 50vw !important;
-  }
-
-  .slick-dots li button:before {
-    font-size: 13px !important;
-  }
-  .slick-dots li.slick-active button:before {
-    color: #675d51 !important;
-  }
-}
-
-.swiper-container {
-  padding: 4.7vw !important;
-  /* border: 1px solid black; */
-  box-shadow: 10px 3px 10px;
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-  border-radius: 50%;
-  color: black !important;
-  background-color: white;
-  box-shadow: 0 4px 2px -2px gray;
-  height: calc(var(--swiper-navigation-size) / 44 * 50) !important;
-  width: calc(var(--swiper-navigation-size) / 44 * 50) !important;
-}
-.swiper-button-prev::after,
-.swiper-button-next::after {
-  font-size: 20px !important;
-  font-weight: 100;
-  padding: 20px !important;
-}
-.swiper-button-prev {
-  right: 5px !important;
-}
-.swiper-button-next {
-  left: 16vw !important;
-}
-
-@media only screen and (min-width: 768px) {
-  .swiper-container {
-    padding: 5.6vw 5.6vw 8.5vw !important;
-    /* border: 1px solid black; */
-  }
-
-  .swiper-button-prev {
-    right: 4vw !important;
-    top: 16vw !important;
-  }
-  .swiper-button-next {
-    left: 5.5vw !important;
-    top: 16vw !important;
-  }
-
-  /* Bottom to Top Animation Library Reveal */
-  .react-reveal {
-    position: absolute;
-    top: 10vw;
-    left: 13vw;
-  }
-
-  /* Project Swiper */
-  .slick-list {
-    height: 42vw !important;
-    width: 50vw !important;
-  }
-}
-
-/* ==============Menu Bar styling =================== */
-
-/* Position and sizing of burger button */
-.bm-burger-button {
-  /* position: absolute; */
-  position: absolute;
-  width: 36px;
-  height: 30px;
-  right: 25px;
-  top: 34px;
-}
-
-/* Color/shape of burger icon bars */
-.bm-burger-bars {
-  background: #373a47;
-}
-
-/* Color/shape of burger icon bars on hover*/
-.bm-burger-bars-hover {
-  background: #a90000;
-}
-
-/* Position and sizing of clickable cross button */
-.bm-cross-button {
-  height: 24px;
-  width: 24px;
-}
-
-/* Color/shape of close button cross */
-.bm-cross {
-  background: #bdc3c7;
-}
-
-/*
-  Sidebar wrapper styles
-  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
-  */
-.bm-menu-wrap {
-  position: fixed;
-  height: 100%;
-  top: 0;
-}
-
-/* General sidebar styles */
-.bm-menu {
-  background: #373a47;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
-}
-
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-  fill: #373a47;
-}
-
-/* Wrapper for item list */
-.bm-item-list {
-  color: #b8b7ad;
-  padding: 0.8em;
-  display: flex;
-  flex-direction: column;
-}
-
-/* Individual item */
-.bm-item {
-  display: inline-block;
-}
-
-/* Styling of overlay */
-.bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
-}
